--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 </canvas>
 </div>
-<script src="script.js"></script>
+<script src="script/classes.js"></script>
+<script src="/script/script.js"></script>
 </body>
 </html>
