--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 <div class="wrapper">
-    <div id="score"></div>
+    <div  style="display: none" id="score"></div>
     <div class="bar">
         <div class="player__health">
-            <div style="position: absolute;background-color: grey;width:100%; height: 100%" id="PlayerHealthbar"></div>
+            <div style="position: absolute; margin-top:2px;margin-left:2px; background-color: deepskyblue;width:100%; height: 100%" id="PlayerHealthbar"></div>
         </div>
-        <div class="Timer">10</div>
+        <div class="Timer"></div>
         <div class="EnemyHealth">
-            <div style="position: absolute; background-color: grey;width:100%; height: 100%" id="EnemyHealthbar"></div>
+            <div style=" position: absolute; margin-top:2px;margin-left:2px;background-color: deepskyblue;width:100%; height: 100%" id="EnemyHealthbar"></div>
         </div>
     </div>
 <canvas>
